--- a/package.json
+++ b/package.json
@@ -23,20 +23,28 @@
     "@types/jest": "^29.5.5",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^27.4.2",
+    "eslint-plugin-prettier": "^5.0.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
+    "live-server": "^1.2.2",
+    "prettier": "^3.1.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   },
   "description": "",
   "dependencies": {
-    "mini-css-extract-plugin": "^2.7.6"
+    "core-js": "^3.33.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "push-dir": "^0.4.1"
   }
 }
