--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@types/jest": "^29.5.5",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
-    "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
@@ -36,15 +35,17 @@
     "live-server": "^1.2.2",
     "prettier": "^3.1.0",
     "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0"
+    "webpack-dev-server": "^4.15.1"
+  
   },
   "description": "",
   "dependencies": {
     "core-js": "^3.33.3",
     "mini-css-extract-plugin": "^2.7.6",
-    "push-dir": "^0.4.1"
+    "push-dir": "^0.4.1",
+    "webpack": "^5.89.0",
+    "webpack-merge": "^5.10.0",
+    "css-minimizer-webpack-plugin": "^5.0.1"
   }
 }
